SLLS-231 Add tests