@@ -34,7 +34,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -67,6 +66,8 @@ import org.sonarsource.sonarlint.core.rpc.protocol.client.OpenUrlInBrowserParams
 import org.sonarsource.sonarlint.core.rpc.protocol.client.binding.AssistBindingParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.binding.SuggestBindingParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.connection.AssistCreatingConnectionParams;
+import org.sonarsource.sonarlint.core.rpc.protocol.client.connection.ConnectionSuggestionDto;
+import org.sonarsource.sonarlint.core.rpc.protocol.client.connection.SuggestConnectionParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.hotspot.HotspotDetailsDto;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.http.CheckServerTrustedParams;
 import org.sonarsource.sonarlint.core.rpc.protocol.client.http.ProxyDto;
@@ -158,41 +159,42 @@ class SonarLintVSCodeClientTests {
   AnalysisScheduler analysisScheduler = mock(AnalysisScheduler.class);
   DiagnosticPublisher diagnosticPublisher = mock(DiagnosticPublisher.class);
 
-  private static final String PEM = "subject=CN=localhost,O=SonarSource SA,L=Geneva,ST=Geneva,C=CH\n" +
-    "issuer=CN=localhost,O=SonarSource SA,L=Geneva,ST=Geneva,C=CH\n" +
-    "-----BEGIN CERTIFICATE-----\n" +
-    "MIIFuzCCA6OgAwIBAgIUU0485256+epwnFU4nHFqUbML9LMwDQYJKoZIhvcNAQEL\n" +
-    "BQAwXDELMAkGA1UEBhMCQ0gxDzANBgNVBAgMBkdlbmV2YTEPMA0GA1UEBwwGR2Vu\n" +
-    "ZXZhMRcwFQYDVQQKDA5Tb25hclNvdXJjZSBTQTESMBAGA1UEAwwJbG9jYWxob3N0\n" +
-    "MB4XDTIzMDYyMjEwMDkzNFoXDTMzMDYxOTEwMDkzNFowXDELMAkGA1UEBhMCQ0gx\n" +
-    "DzANBgNVBAgMBkdlbmV2YTEPMA0GA1UEBwwGR2VuZXZhMRcwFQYDVQQKDA5Tb25h\n" +
-    "clNvdXJjZSBTQTESMBAGA1UEAwwJbG9jYWxob3N0MIICIjANBgkqhkiG9w0BAQEF\n" +
-    "AAOCAg8AMIICCgKCAgEAqJ++BMwWh4nywl8vdAoEson8qSYiAL4sUrEn2ytmtCJR\n" +
-    "H3TNuTL5C/C1/gD3B9xIRjiR1EaCowLGgzC9blmtOE4aQYfk59U+QcgEjUdjFPX8\n" +
-    "IVT4fE/afIkh4c4+sucZktx8PzO/eX0qh51kN/TUt/PyCOl/16FMlMoiWYlE/Yqg\n" +
-    "h/Wf15GQClKdhx6Q2VdMAl5pz+wMjzxbE2pzxfSahdr9ZoNm9PntFxJSKcuqLjsz\n" +
-    "/Fn3xgmB6QOsCvUz4UN3C7szumpvhA647dA18abZzqzPA74Uco26R9w1YpsXWPnj\n" +
-    "aN6E+pC608RYrra0C2wJnMiiEiLQjoxndjQXbODgeUnTUpDJwpDi9c7uhNhfX7oc\n" +
-    "0K9BWr59o4LmdX48bezuXJns07ep4dzBtEnpzA4gpH3h7WlRvAXbADW17Kgsz9l5\n" +
-    "26phjSOsKnIDp6kpP3Hg4uZBF/0IqgJw8qsfc2k3itLgdK0ODorpl57nZDr0GHKo\n" +
-    "UTCnfX9o5mmbanqpKY5S9tRt0a3/3jl9FQtoZtFUvXgU7HJUHVqFNS6EXXh8bAOF\n" +
-    "F02VQwbNZVqqtgiIszn3akOmbx3LAr7U5r5OFAnNeRDpTvVXcCzukmT1v0Lny/km\n" +
-    "Q2mZhGdzBj0VRh27e591/ZTvqjVH5RS08BqxWwcqKCvSwd/XtfOXJ0E7qSsCZUsC\n" +
-    "AwEAAaN1MHMwCwYDVR0PBAQDAgG2MBMGA1UdJQQMMAoGCCsGAQUFBwMBMB0GA1Ud\n" +
-    "DgQWBBS2uKvZ9HILvXk2pvy9TmE+HQDIsjAfBgNVHSMEGDAWgBS2uKvZ9HILvXk2\n" +
-    "pvy9TmE+HQDIsjAPBgNVHRMBAf8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4ICAQAK\n" +
-    "Hh7c06ZKZG2c474xWeFzMTnvx5kM2C+9PtkM0irqxx+PHtz0BTgWP3ZwArEIxppf\n" +
-    "qeWjOqBkK5NlrMz/4MiAMhWqfpJVOr7oXUDNpahA8fzRPnet86vqx7btftjuNybi\n" +
-    "GQvc1OSWQQeXCiKQku8MTQ7F2Y2vwxE+WxkmBIZdRL+fRTCfwxYQKMR22WkcRyKe\n" +
-    "pw7/UVpnEAWi1fZNbO5kyol0zc/iPWZPIhAz6SN3SWff46/2BlwYnQHKYUrqrQEB\n" +
-    "l20SgAri3Jqc6mM87VSmhQLambR6scFaH/vGquOdp07SswLnWPltv9V2ShlyXWZX\n" +
-    "nb3RFDGhdYSHXJxA4sw1jbMxJGP6Hq9ii/QzeLwLNloV4IVTXliFxI73Bil4RIu4\n" +
-    "CiGtl0uy/1D3hoBc/0lVLngcZfnSs23/5sQbg5XAjwHB6O9eVCXWUVfSUzsBgIcL\n" +
-    "uD2kQv79yRPBBo+ABCHc68p+dZgSSyQ7aFOU1CMOhkpELGFVzcn2YceIGRd4Dd0l\n" +
-    "vrwymIcBDyvzblV+1Hskhm8tLvhHBDYtyYeN5+fHKSq5dIZDeUhpP/VX2oe5Ykab\n" +
-    "5u8k3JnweNKqAwFJPPJtTtV1UYr9tRImyoLsGBtQSS0T38r1RJS6etc4MYWv3ASP\n" +
-    "C8AByyAgSt1p8KU4tGX74nn+oeCJApZ1o6Qt1JNiSA==\n" +
-    "-----END CERTIFICATE-----";
+  private static final String PEM = """
+    subject=CN=localhost,O=SonarSource SA,L=Geneva,ST=Geneva,C=CH
+    issuer=CN=localhost,O=SonarSource SA,L=Geneva,ST=Geneva,C=CH
+    -----BEGIN CERTIFICATE-----
+    MIIFuzCCA6OgAwIBAgIUU0485256+epwnFU4nHFqUbML9LMwDQYJKoZIhvcNAQEL
+    BQAwXDELMAkGA1UEBhMCQ0gxDzANBgNVBAgMBkdlbmV2YTEPMA0GA1UEBwwGR2Vu
+    ZXZhMRcwFQYDVQQKDA5Tb25hclNvdXJjZSBTQTESMBAGA1UEAwwJbG9jYWxob3N0
+    MB4XDTIzMDYyMjEwMDkzNFoXDTMzMDYxOTEwMDkzNFowXDELMAkGA1UEBhMCQ0gx
+    DzANBgNVBAgMBkdlbmV2YTEPMA0GA1UEBwwGR2VuZXZhMRcwFQYDVQQKDA5Tb25h
+    clNvdXJjZSBTQTESMBAGA1UEAwwJbG9jYWxob3N0MIICIjANBgkqhkiG9w0BAQEF
+    AAOCAg8AMIICCgKCAgEAqJ++BMwWh4nywl8vdAoEson8qSYiAL4sUrEn2ytmtCJR
+    H3TNuTL5C/C1/gD3B9xIRjiR1EaCowLGgzC9blmtOE4aQYfk59U+QcgEjUdjFPX8
+    IVT4fE/afIkh4c4+sucZktx8PzO/eX0qh51kN/TUt/PyCOl/16FMlMoiWYlE/Yqg
+    h/Wf15GQClKdhx6Q2VdMAl5pz+wMjzxbE2pzxfSahdr9ZoNm9PntFxJSKcuqLjsz
+    /Fn3xgmB6QOsCvUz4UN3C7szumpvhA647dA18abZzqzPA74Uco26R9w1YpsXWPnj
+    aN6E+pC608RYrra0C2wJnMiiEiLQjoxndjQXbODgeUnTUpDJwpDi9c7uhNhfX7oc
+    0K9BWr59o4LmdX48bezuXJns07ep4dzBtEnpzA4gpH3h7WlRvAXbADW17Kgsz9l5
+    26phjSOsKnIDp6kpP3Hg4uZBF/0IqgJw8qsfc2k3itLgdK0ODorpl57nZDr0GHKo
+    UTCnfX9o5mmbanqpKY5S9tRt0a3/3jl9FQtoZtFUvXgU7HJUHVqFNS6EXXh8bAOF
+    F02VQwbNZVqqtgiIszn3akOmbx3LAr7U5r5OFAnNeRDpTvVXcCzukmT1v0Lny/km
+    Q2mZhGdzBj0VRh27e591/ZTvqjVH5RS08BqxWwcqKCvSwd/XtfOXJ0E7qSsCZUsC
+    AwEAAaN1MHMwCwYDVR0PBAQDAgG2MBMGA1UdJQQMMAoGCCsGAQUFBwMBMB0GA1Ud
+    DgQWBBS2uKvZ9HILvXk2pvy9TmE+HQDIsjAfBgNVHSMEGDAWgBS2uKvZ9HILvXk2
+    pvy9TmE+HQDIsjAPBgNVHRMBAf8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4ICAQAK
+    Hh7c06ZKZG2c474xWeFzMTnvx5kM2C+9PtkM0irqxx+PHtz0BTgWP3ZwArEIxppf
+    qeWjOqBkK5NlrMz/4MiAMhWqfpJVOr7oXUDNpahA8fzRPnet86vqx7btftjuNybi
+    GQvc1OSWQQeXCiKQku8MTQ7F2Y2vwxE+WxkmBIZdRL+fRTCfwxYQKMR22WkcRyKe
+    pw7/UVpnEAWi1fZNbO5kyol0zc/iPWZPIhAz6SN3SWff46/2BlwYnQHKYUrqrQEB
+    l20SgAri3Jqc6mM87VSmhQLambR6scFaH/vGquOdp07SswLnWPltv9V2ShlyXWZX
+    nb3RFDGhdYSHXJxA4sw1jbMxJGP6Hq9ii/QzeLwLNloV4IVTXliFxI73Bil4RIu4
+    CiGtl0uy/1D3hoBc/0lVLngcZfnSs23/5sQbg5XAjwHB6O9eVCXWUVfSUzsBgIcL
+    uD2kQv79yRPBBo+ABCHc68p+dZgSSyQ7aFOU1CMOhkpELGFVzcn2YceIGRd4Dd0l
+    vrwymIcBDyvzblV+1Hskhm8tLvhHBDYtyYeN5+fHKSq5dIZDeUhpP/VX2oe5Ykab
+    5u8k3JnweNKqAwFJPPJtTtV1UYr9tRImyoLsGBtQSS0T38r1RJS6etc4MYWv3ASP
+    C8AByyAgSt1p8KU4tGX74nn+oeCJApZ1o6Qt1JNiSA==
+    -----END CERTIFICATE-----""";
 
   @BeforeEach
   public void setup() throws IOException {
@@ -208,9 +210,11 @@ class SonarLintVSCodeClientTests {
     Files.createDirectories(workspaceFolderPath);
     fileInAWorkspaceFolderPath = workspaceFolderPath.resolve(FILE_PYTHON);
     Files.createFile(fileInAWorkspaceFolderPath);
-    Files.write(fileInAWorkspaceFolderPath, ("print('1234')\n" +
-      "print('aa')\n" +
-      "print('b')\n").getBytes(StandardCharsets.UTF_8));
+    Files.writeString(fileInAWorkspaceFolderPath, """
+      print('1234')
+      print('aa')
+      print('b')
+      """);
   }
 
   @BeforeAll
@@ -253,13 +257,32 @@ class SonarLintVSCodeClientTests {
   @Test
   void shouldSuggestBinding() {
     var suggestions = new HashMap<String, List<BindingSuggestionDto>>();
-    suggestions.put("key", Collections.emptyList());
+    suggestions.put("key", List.of());
 
     underTest.suggestBinding(suggestions);
 
     var captor = ArgumentCaptor.forClass(SuggestBindingParams.class);
     verify(client).suggestBinding(captor.capture());
     assertThat(captor.getValue().getSuggestions()).isEqualTo(suggestions);
+  }
+
+  @Test
+  void shouldSuggestConnection() {
+    var suggestions = new HashMap<String, List<ConnectionSuggestionDto>>();
+    suggestions.put("key", List.of());
+
+    underTest.suggestConnection(suggestions);
+
+    var captor = ArgumentCaptor.forClass(SuggestConnectionParams.class);
+    verify(client).suggestConnection(captor.capture());
+    assertThat(captor.getValue().getSuggestionsByConfigScopeId()).isEqualTo(suggestions);
+  }
+
+  @Test
+  void shouldSkipEmptySuggestionConnection() {
+    underTest.suggestConnection(Map.of());
+
+    verify(client, never()).suggestBinding(any());
   }
 
   @Test
